[package]
edition = "2021"
name = "ector"
version = "0.5.0"
description = "Ector is an open source async, no-alloc actor framework for embedded devices."
documentation = "https://docs.rs/ector"
readme = "../README.md"
homepage = "https://drogue.io"
repository = "https://github.com/drogue-iot/ector"
license = "Apache-2.0"
keywords = ["embedded", "async", "actor"]
exclude = [".github"]

[lib]
doctest = false

[dependencies]
embassy-executor = { version = "0.4", default-features = false, features = ["nightly"] }
embassy-sync = { version = "0.5", default-features = false, features = ["nightly"] }
atomic-polyfill = "1"

log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

ector-macros = { version = "0.5.0", path = "../macros" }
futures = { version = "0.3", default-features = false }
static_cell = "1.0.0"


[dev-dependencies]
embassy-executor = { version = "0.4.0", default-features = false, features = ["integrated-timers", "nightly", "arch-std", "executor-thread"]}
embassy-time = { version = "0.2.0", default-features = false, features = ["std", "nightly"] }
futures = { version = "0.3", default-features = false, features = ["executor"] }
critical-section = { version = "1.1", features = ["std"] }
ector = { path = ".", features = ["std", "log", "time", "test-utils"] }

[features]
default = [ "std", "log", "time" ]
std = ["embassy-executor/integrated-timers", "embassy-executor/arch-std", "embassy-time/std", "critical-section/std"]
test-utils = []
time = []
