[package]
edition = "2021"
name = "ector"
version = "0.7.0"
description = "Ector is an open source async, no-alloc actor framework for embedded devices."
documentation = "https://docs.rs/ector"
readme = "../README.md"
homepage = "https://drogue.io"
repository = "https://github.com/drogue-iot/ector"
license = "Apache-2.0"
keywords = ["embedded", "async", "actor"]
exclude = [".github"]

[lib]
doctest = false

[dependencies]
embassy-executor = { version = "0.7", default-features = false }
embassy-sync = { version = "0.7", default-features = false }
portable-atomic = { version = "1.3", default-features = false }

log = { version = "0.4", optional = true }
defmt = { version = "1.0.1", optional = true }

ector-macros = { version = "0.5.1", path = "../macros" }
futures = { version = "0.3", default-features = false }
static_cell = "2.1"


[dev-dependencies]
embassy-executor = { version = "0.7", default-features = false, features = [
    "arch-std",
    "executor-thread",
] }
embassy-time = { version = "0.4", default-features = false, features = [
    "std",
] }
embassy-futures = "0.1.1"
futures = { version = "0.3.31", default-features = false, features = [
    "executor",
] }
critical-section = { version = "1.2.0", features = ["std"] }
ector = { path = ".", features = ["std", "log", "time", "test-utils"] }

[features]
default = ["std", "log", "time"]
std = [
    "embassy-executor/arch-std",
    "embassy-time/std",
    "critical-section/std",
]
test-utils = []
time = []
