[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "ector-macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
#darling = "0.10.2"
proc-macro2 = "1.0"

[features]
std = []
