[package]
	authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2021"
name = "ector-macros"
version = "0.2.0"
description = "Ector is an open source async, no-alloc actor framework for embedded devices."
documentation = "https://docs.rs/ector-macros"
readme = "../README.md"
homepage = "https://drogue.io"
repository = "https://github.com/drogue-iot/ector"
license = "Apache-2.0"
keywords = ["embedded", "async", "actor"]
exclude = [".github"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
#darling = "0.10.2"
proc-macro2 = "1.0"

[features]
std = []
